--- a/Class_2_Activities 9/03-Ins_Assessing_Risk_Reward/Unsolved/assessing_risk_reward.ipynb
+++ b/Class_2_Activities 9/03-Ins_Assessing_Risk_Reward/Unsolved/assessing_risk_reward.ipynb
@@ -1174,7 +1174,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "996ffda76004d767ccbaaba7e2437ee3b45ec97388b0612ddf8c69ff1d3b8680"
+   }
   }
  },
  "nbformat": 4,
