--- a/Class_2_Activities 9/03-Ins_Assessing_Risk_Reward/Unsolved/assessing_risk_reward.ipynb
+++ b/Class_2_Activities 9/03-Ins_Assessing_Risk_Reward/Unsolved/assessing_risk_reward.ipynb
@@ -380,13 +380,19 @@
    ],
    "source": [
     "# Create a list for the column name\n",
-    "\n",
+    "columns = ['Backtest']\n",
     "\n",
     "# Create a list holding the names of the new evaluation metrics\n",
-    "\n",
+    "metrics = [\n",
+    "    'Annualized Return',\n",
+    "    'Cumulative Returns',\n",
+    "    'Annual Volatility',\n",
+    "    'Sharpe Ratio',\n",
+    "    'Sortino Ratio'\n",
+    "]\n",
     "\n",
     "# Initialize the DataFrame with index set to the evaluation metrics and the column\n",
-    "\n",
+    "portfolio_evaluation_df\n",
     "\n",
     "# Review the DataFrame\n"
    ]
